--- a/.github/workflows/process_images.yml
+++ b/.github/workflows/process_images.yml
@@ -58,6 +58,7 @@ jobs:
 
         const sizes = [
           { width: 315, height: 315, suffix: '-315x315' },
+          { width: 630, height: 630, suffix: '-630x630' },
           { width: 630, height: 315, suffix: '-630x315' },
           { width: 1200, height: 630, suffix: '-1200x630' }
         ];
